Fix alignment of articulation info and dpdwn btns

--- a/src/styles/Plan.css
+++ b/src/styles/Plan.css
@@ -163,6 +163,10 @@
   line-height: 25px;
 }
 
+.articulation-info {
+  margin-right: 5px;
+}
+
 .dropdown {
   padding: 3px 12px;
 }
